--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.5",
     "@babel/preset-env": "^7.24.0",
+    "@vue/apollo-option": "^4.0.0",
     "axios": "^1.7.2",
     "babel-jest": "^29.7.0",
     "graphql": "^16.8.2",
