--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,12 @@
   "name": "shopme",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "dev": "vite",
     "format": "prettier --write src/",
+    "preview": "vite preview",
     "test": "jest"
   },
   "dependencies": {
@@ -22,6 +21,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "vue": "^3.3.11",
+    "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
@@ -29,11 +29,15 @@
     "@babel/preset-typescript": "^7.23.3",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.2",
+    "typescript": "~4.5.5",
     "vite": "^5.0.10"
-  }
+  },
+  "type": "module"
 }
